Fix readability
* More standard font.
* Larger line spacing in search result snippet.
* Additional padding/margin tweaks.

--- a/pub/index.css
+++ b/pub/index.css
@@ -2,7 +2,7 @@ html {
   overflow: scroll; /* avoid #q width flicker */
 }
 body {
-  font-family: "Droid Sans", arial, serif;
+  font-family: arial, serif;
 }
 iframe {
   border: solid 1px #cccccc;
@@ -22,9 +22,13 @@ iframe {
 }
 .past-query {
   display: block;
-  font-size: 0.9em;
+  font-size: 0.8em;
   margin-top: 0.5em;
   text-align: center;
+  text-decoration: none;
+}
+.past-query:hover {
+  text-decoration: underline;
 }
 .result-template:hover {
   cursor: pointer;
@@ -39,7 +43,8 @@ iframe {
   font-size: 0.8em;
 }
 .result-template .ft {
-  font-size: 0.9em;
+  font-size: 0.8em;
+  line-height: 1.4em;
   padding-top: 0.25em;
   padding-bottom: 0.5em;
   border-bottom: solid 1px #ccc;
@@ -52,8 +57,8 @@ iframe {
 .result-template .ft .viewer-toggle-label {
   background-color: orange;
   color: white;
-  font-size: 0.9em;
-  padding: 0.25em 0.5em 0.25em 0.5em;
+  font-size: 0.8em;
+  padding: 0.5em 2em 0.5em 2em;
 }
 .result-template .ft .viewer-toggle-on {
   visibility: visible;;
@@ -70,16 +75,16 @@ iframe {
 #q {
   font-size: 1.25em;
   font-weight: bold;
-  margin-bottom: 0.25em;
+  margin: 0.25em 0 0.25em 0;
   padding: 0.25em;
   text-align: center;
-  border: solid 1px #cccccc;
+  border: solid 1px #dedede;
   width: 98%;
 }
 
 #logo {
   font-size: 1.25em;
   font-weight: bold;
-  padding: 0.25em;
+  padding: 0.5em 0 0.5em 0;
   text-align: center;
 }
